--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+
+# files too large to upload to gitHub
+ios/
+
+
+
 # User-specific files
 *.rsuser
 *.suo
