--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-material-kit": "^0.6.0-beta.1",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^3.22.1",
+    "react-native-textinput-effects": "^0.6.3",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.1.1",
